bat.bool1.nearhundred.NearHundred.scala.error
Erreur de compilation :
NearHundred:1: error: not found: value ||
def nearHundred(n:Int): Boolean = {if (Math.abs(100-n) <= 10) || (Math.abs(200-n)) {return true}
                                                              ^